infra/cert-manager-webhook.yaml
# author: Karakate
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"webhook","app.kubernetes.io/component":"webhook","app.kubernetes.io/instance":"cert-manager","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"webhook","helm.sh/chart":"cert-manager-v0.16.1"},"name":"cert-manager-webhook","namespace":"cert-manager"},"spec":{"ports":[{"name":"https","port":443,"targetPort":10250}],"selector":{"app.kubernetes.io/component":"webhook","app.kubernetes.io/instance":"c [...]
  creationTimestamp: "2020-09-24T00:54:48Z"
  labels:
    app: webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: webhook
    helm.sh/chart: cert-manager-v0.16.1
  name: cert-manager-webhook
  namespace: cert-manager
  resourceVersion: "811708"
  selfLink: /api/v1/namespaces/cert-manager/services/cert-manager-webhook
  uid: 64567da2-da43-424e-be06-941a4fcd7b3a
spec:
  clusterIP: 10.92.9.106
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 10250
  selector:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/name: webhook
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
