infra/cert-manager.yaml
# author: Karakate
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"cert-manager","app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"cert-manager","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"cert-manager","helm.sh/chart":"cert-manager-v0.16.1"},"name":"cert-manager","namespace":"cert-manager"},"spec":{"ports":[{"port":9402,"protocol":"TCP","targetPort":9402}],"selector":{"app.kubernetes.io/component":"controller","app.kubernetes.io/in [...]
  creationTimestamp: "2020-09-24T00:54:47Z"
  labels:
    app: cert-manager
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cert-manager
    helm.sh/chart: cert-manager-v0.16.1
  name: cert-manager
  namespace: cert-manager
  resourceVersion: "811697"
  selfLink: /api/v1/namespaces/cert-manager/services/cert-manager
  uid: 6fd62e6e-2039-425c-88f9-4ec4f5e2cfbc
spec:
  clusterIP: 10.92.0.174
  ports:
  - port: 9402
    protocol: TCP
    targetPort: 9402
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/name: cert-manager
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
