infra/ingress-resource.yaml
# author: Karakate
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/enable-cors":"true","nginx.ingress.kubernetes.io/rewrite-target":"/$2","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"name":"ingress-resource","namespace":"default"},"spec":{"rules":[{"host":"dm12.club","http":{"paths":[{"backend":{"serviceName":"back","servicePort":80},"path":"/api(/|$)(.*)"}]}}]}}
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2020-09-23T13:31:20Z"
  generation: 3
  name: ingress-resource
  namespace: default
  resourceVersion: "812855"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/ingress-resource
  uid: 56865f59-77ac-4924-8c85-3df3855e370f
spec:
  rules:
  - host: dm12.club
    http:
      paths:
      - backend:
          serviceName: back
          servicePort: 80
        path: /api(/|$)(.*)
status:
  loadBalancer:
    ingress:
    - ip: <redacted>
